<resources>
    <string name="app_name">Security System</string>
    <string name="action_settings">Settings</string>
    <string name="stop_service">Stop service!</string>
    <string name="start_service">Start service!</string>
    <string name="main_text">Camera Door Application!</string>
    <string name="switch1">Automatically starting an Android application on boot</string>
    <string name="imageDescription">logo</string>
    <string name="settings">Settings</string>
    <string name="history">History</string>
    <string name="SettingsStart">Start an Application on startup</string>
    <string name="switchBackground">Start the app in background</string>
    <string name="EditDescr">Write your link to camera</string>
    <string name="save">Save</string>
    <string name="editText">Link for open:</string>
    <string name="title_activity_history">History</string>
    <string name="removeData">Clear DataBase</string>
    <string name="service_working">Service is working!</string>
    <string name="title_activity_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_top">Top Main Fragment</string>

    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>

    <string-array name="titles">
        <item>Home</item>
        <item>Settings</item>
        <item>History</item>
    </string-array>
</resources>
