<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    android:layout_margin="10dp"
    tools:context="vadymshevchenko.com.doorcameraandroidspecialproject.SettingsActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:typeface="sans"
        android:text="@string/SettingsStart"
        android:id="@+id/textView"
        android:textSize="15sp"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/switchStart"
        android:layout_margin="10dp"
         />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/switchStart"
        android:layout_alignParentRight="true"
        android:layout_margin="10dp"
        android:onClick="onSwitchClickedStartBoot"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:typeface="sans"
        android:text="@string/switchBackground"
        android:id="@+id/textView1"
        android:textSize="15sp"
        android:layout_below="@id/textView"
        android:layout_alignParentLeft="true"
        android:layout_margin="10dp"
        />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/switchBackground"
        android:layout_below="@id/switchStart"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@id/textView1"
        android:layout_margin="10dp"
        android:onClick="onSwitchClickedStartBackground"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:ems="20"
        android:id="@+id/editText"
        android:hint="@string/EditDescr"
        android:layout_below="@id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        />

    <Button
        android:id="@+id/save"
        android:text="@string/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="clickOnSave"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"

        />


</RelativeLayout>
