<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/main_text"
        android:textSize="20sp"
        android:typeface="sans"
        android:textAppearance="?android:attr/textAppearanceLarge"
        />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/imageDescription"
        android:src="@drawable/frontdoorcamera" />

    <Button
        android:id="@+id/start_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="55dp"
        android:minWidth="200dp"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:text="@string/start_service" />

    <Button
        android:id="@+id/stop_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="55dp"
        android:minWidth="200dp"
        android:layout_below="@+id/start_service"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/stop_service"
        />



    <Button
        android:id="@+id/history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/view"
        android:text="@string/history" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/view"
        android:layout_alignParentBottom="true"
        android:text="@string/settings" />

</RelativeLayout>

<!--

<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:columnCount="2">

<TextView
    android:id="@+id/textView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_column="0"
    android:layout_columnSpan="2"
    android:layout_gravity="center"
    android:layout_marginTop="10dp"
    android:layout_row="0"
    android:text="@string/main_text"
    android:textSize="20sp"
    android:typeface="sans" />

<ImageView
    android:id="@+id/imageView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_column="0"
    android:layout_columnSpan="2"
    android:layout_row="1"
    android:contentDescription="@string/imageDescription"
    android:src="@drawable/frontdoorcamera" />

<Button
    android:id="@+id/start_service"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_column="0"
    android:layout_columnSpan="2"
    android:layout_gravity="center_horizontal"
    android:layout_row="2"
    android:minHeight="55dp"
    android:minWidth="200dp"
    android:text="@string/start_service" />

<Button
    android:id="@+id/stop_service"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_column="0"
    android:layout_columnSpan="2"
    android:layout_gravity="center_horizontal"
    android:layout_marginBottom="50dp"
    android:layout_row="3"
    android:minHeight="55dp"
    android:minWidth="200dp"
    android:text="@string/stop_service"
    />

<Button
    android:id="@+id/settings"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_column="0"
    android:layout_columnWeight="1"
    android:layout_gravity="fill_horizontal"
    android:layout_row="4"
    android:text="@string/settings"

    />

<Button
    android:id="@+id/history"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_column="1"
    android:layout_columnWeight="1"
    android:layout_gravity="fill_horizontal"
    android:layout_row="4"
    android:text="@string/history" />

</GridLayout>

-->
